# zukou

./: .clang-format  CONTRIBUTING.md  README.adoc  README.md  meson.build
.github/workflows/: test.yaml
assets/: CREDIT.md
include/: meson.build  zukou.h
include/zukou/: entities.h  objects.h  primitives.h  zukou.h
protocol/: meson.build
sample/: box.cc  box.h  celestial-body.cc  cube.cc  cube.h  cube.vert  cuboid.cc  cuboid.h  default.vert  jpeg-texture.cc  jpeg-texture.h  main.cc  meson.build  sphere.cc  sphere.h  texture.frag
src/: common.h  convert.cc  convert.h  logger.cc  logger.h  loop.cc  loop.h  meson.build  system.cc  system.h  util.cc
src/base/: bounded.cc  bounded.h  buffer.cc  buffer.h  expansive.cc  expansive.h  gl-base-technique.cc  gl-base-technique.h  gl-buffer.cc  gl-buffer.h  gl-program.cc  gl-program.h  gl-sampler.cc  gl-sampler.h  gl-shader.cc  gl-shader.h  gl-texture.cc  gl-texture.h  gl-vertex-array.cc  gl-vertex-array.h  region.cc  region.h  rendering-unit.cc  rendering-unit.h  shm-pool.cc  shm-pool.h  space.cc  space.h  virtual-object.cc  virtual-object.h
tools/: textify.py
zukou/: application.cc  buffer.cc  cuboid-window.cc  data-device.cc  data-device.h  data-offer.cc  glm-helper.h  meson.build  opengl-component.cc  opengl-element-array-buffer.cc  opengl-shader-program.cc  opengl-texture.cc  opengl-vertex-buffer.cc  os-helper.h  ray.cc  ray.h  virtual-object.cc  wayland-helper.h
zukou/entities/: frame-cuboid.cc  intersection.cc  meson.build
zukou/objects/: meson.build  object-group.cc
zukou/primitives/: frame-cuboid.cc  frame-cuboid.frag  frame-sphere.cc  frame-sphere.vert  meson.build
